# SOVEREIGN-POLITICS-BOT

./: Cargo.toml  bot_politico_fallback.py  posted_news.json
.github/workflows/: list_models.yml  politics.yml
src/: main.rs
